--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/bootstrap-3.3.4.css">
+    <link rel="stylesheet" type="text/css" media="all" href="daterangepicker.css" />
+    <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+    <script src="http://www.jq22.com/jquery/bootstrap-3.3.4.js"></script>
+    <script type="text/javascript" src="moment.js"></script>
+    <script type="text/javascript" src="daterangepicker.js"></script>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <script src="js/main.js"></script>
 </head>
 <body>
@@ -33,6 +45,23 @@
             <th>有效期</th>
             <th>截止日期</th>
             <th>是否作废</th>
+            <th>操作</th>
+        </tr>
+        <tbody>
+        <tr>
+            <td><input type="checkbox"></td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td>哈哈哈</td>
+            <td><a href="javascript:;">编辑</a> <a href="javascript:;">删除</a></td>
         </tr>
         <tr>
             <td><input type="checkbox"></td>
@@ -47,6 +76,7 @@
             <td>哈哈哈</td>
             <td>哈哈哈</td>
             <td>哈哈哈</td>
+            <td><a href="javascript:;">编辑</a> <a href="javascript:;">删除</a></td>
         </tr>
         <tr>
             <td><input type="checkbox"></td>
@@ -61,6 +91,7 @@
             <td>哈哈哈</td>
             <td>哈哈哈</td>
             <td>哈哈哈</td>
+            <td><a href="javascript:;">编辑</a> <a href="javascript:;">删除</a></td>
         </tr>
         <tr>
             <td><input type="checkbox"></td>
@@ -75,6 +106,7 @@
             <td>哈哈哈</td>
             <td>哈哈哈</td>
             <td>哈哈哈</td>
+            <td><a href="javascript:;">编辑</a> <a href="javascript:;">删除</a></td>
         </tr>
         <tr>
             <td><input type="checkbox"></td>
@@ -89,6 +121,7 @@
             <td>哈哈哈</td>
             <td>哈哈哈</td>
             <td>哈哈哈</td>
+            <td><a href="javascript:;">编辑</a> <a href="javascript:;">删除</a></td>
         </tr>
         <tr>
             <td><input type="checkbox"></td>
@@ -103,6 +136,7 @@
             <td>哈哈哈</td>
             <td>哈哈哈</td>
             <td>哈哈哈</td>
+            <td><a href="javascript:;">编辑</a> <a href="javascript:;">删除</a></td>
         </tr>
         <tr>
             <td><input type="checkbox"></td>
@@ -117,21 +151,9 @@
             <td>哈哈哈</td>
             <td>哈哈哈</td>
             <td>哈哈哈</td>
+            <td><a href="javascript:;">编辑</a> <a href="javascript:;">删除</a></td>
         </tr>
-        <tr>
-            <td><input type="checkbox"></td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-            <td>哈哈哈</td>
-        </tr>
+        </tbody>
     </table>
     <div class="pages">
         <span class="disabled">首页</span><span>上一页</span><span class="current">1</span><span>下一页</span><span>末页</span><span class="sum">共1页/4条数据</span><p>转到 <input value="1"> 页</p>
