--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Title</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/bootstrap-3.3.4.css">
-    <link rel="stylesheet" type="text/css" media="all" href="daterangepicker.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="css/daterangepicker.css" />
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script src="http://www.jq22.com/jquery/bootstrap-3.3.4.js"></script>
-    <script type="text/javascript" src="moment.js"></script>
-    <script type="text/javascript" src="daterangepicker.js"></script>
+    <script type="text/javascript" src="js/moment.js"></script>
+    <script type="text/javascript" src="js/daterangepicker.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -32,7 +32,7 @@
         <input type="text" placeholder="请选择搜索类型"><span><button>搜索</button></span>
     </div>
     <table>
-        <tr>
+        <thead><tr>
             <th><input type="checkbox"></th>
             <th>卡号</th>
             <th>卡密</th>
@@ -46,7 +46,7 @@
             <th>截止日期</th>
             <th>是否作废</th>
             <th>操作</th>
-        </tr>
+        </tr></thead>
         <tbody>
         <tr>
             <td><input type="checkbox"></td>
